--- a/MVCEventCalendar/Views/Home/Index.cshtml
+++ b/MVCEventCalendar/Views/Home/Index.cshtml
@@ -2,8 +2,8 @@
     ViewBag.Title = "Mancosa";
 }
 
-<h2>Mancosa Events</h2>
-<div id="calender"></div>
+<h2>Mancosa Events Calendar</h2>
+<div id="Calender"></div>
 
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
